Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
X3DDECL int X3DCALL xFilePos(Handle file);
X3DDECL void X3DCALL xSeekFile(Handle file, int offset);
X3DDECL int X3DCALL xFileType(const char * path);
X3DDECL int X3DCALL xFileSize(const char * path);
X3DDECL int X3DCALL xFileCreationTime(const char * path);
X3DDECL const char * X3DCALL xFileCreationTimeStr(const char * path);
X3DDECL int X3DCALL xFileModificationTime(const char * path);
X3DDECL const char * X3DCALL xFileModificationTimeStr(const char * path);
X3DDECL int X3DCALL xReadDir(const char * path);
X3DDECL void X3DCALL xCloseDir(int handle);
X3DDECL const char * X3DCALL xNextFile(int handle);
X3DDECL const char * X3DCALL xCurrentDir();
X3DDECL void X3DCALL xChangeDir(const char * path);
X3DDECL int X3DCALL xCreateDir(const char * path);
X3DDECL int X3DCALL xDeleteDir(const char * path);
X3DDECL int X3DCALL xCopyFile(const char * pathSrc, const char * pathDest);
X3DDECL int X3DCALL xDeleteFile(const char * path);
X3DDECL int X3DCALL xEof(Handle file);
X3DDECL int X3DCALL xReadByte(Handle file);
X3DDECL int X3DCALL xReadShort(Handle file);
X3DDECL int X3DCALL xReadInt(Handle file);
X3DDECL float X3DCALL xReadFloat(Handle file);
X3DDECL const char * X3DCALL xReadString(Handle file);
X3DDECL const char * X3DCALL xReadLine(Handle file, int ls_flag = 0);
X3DDECL void X3DCALL xWriteByte(Handle file, int value);
X3DDECL void X3DCALL xWriteShort(Handle file, int value);
X3DDECL void X3DCALL xWriteInt(Handle file, int value);
X3DDECL void X3DCALL xWriteFloat(Handle file, float value);
X3DDECL void X3DCALL xWriteString(Handle file, const char * value);
X3DDECL void X3DCALL xWriteLine(Handle file, const char * value, int ls_flag = 0);
// fonts commands
X3DDECL Handle X3DCALL xLoadFont(const char * name, int height, bool bold = false, bool italic = false, bool underline = false, const char * fontface = "");
X3DDECL void X3DCALL xText(float x, float y, const char * textString, bool centerx = false, bool centery = false);
X3DDECL void X3DCALL xSetFont(Handle font);
X3DDECL void X3DCALL xFreeFont(Handle font);
X3DDECL int X3DCALL xFontWidth();
X3DDECL int X3DCALL xFontHeight();
X3DDECL int X3DCALL xStringWidth(const char * textString);
X3DDECL int X3DCALL xStringHeight(const char * textString);
// graphics commands
X3DDECL int X3DCALL xWinMessage(const char * message);
X3DDECL int X3DCALL xGetMaxPixelShaderVersion();
X3DDECL void X3DCALL xLine(int x1, int y1, int x2, int y2);
X3DDECL void X3DCALL xRect(int x, int y, int width, int height, bool solid = false);
X3DDECL int X3DCALL xRectsOverlap(int x1, int y1, int width1, int height1, int x2, int y2, int width2, int height2);
X3DDECL void X3DCALL xViewport(int x, int y, int width, int height);
X3DDECL void X3DCALL xOval(int x, int y, int width, int height, bool solid = false);
X3DDECL void X3DCALL xOrigin(int x, int y);
X3DDECL int X3DCALL xGetMaxVertexShaderVersion();
X3DDECL int X3DCALL xGetMaxAntiAlias();
X3DDECL int X3DCALL xGetMaxTextureFiltering();
X3DDECL void X3DCALL xSetAntiAliasType(int typeID);
X3DDECL void X3DCALL xAppTitle(const char * title);
X3DDECL void X3DCALL xSetWND(Handle window);
X3DDECL void X3DCALL xSetRenderWindow(Handle window);
X3DDECL void X3DCALL xSetTopWindow(Handle window);
X3DDECL void X3DCALL xDestroyRenderWindow();
X3DDECL void X3DCALL xFlip();
X3DDECL Handle X3DCALL xBackBuffer();
X3DDECL void X3DCALL xLockBuffer(int buffer = NULL);
X3DDECL void X3DCALL xUnlockBuffer(int buffer = NULL);
X3DDECL void X3DCALL xWritePixelFast(int x, int y, DWORD argb, int buffer = -1);
X3DDECL DWORD X3DCALL xReadPixelFast(int x, int y, int buffer = -1);
X3DDECL Handle X3DCALL xGetPixels(int buffer = -1);
X3DDECL void X3DCALL xSaveBuffer(int buffer, const char * path);
X3DDECL int X3DCALL xGetCurrentBuffer();
X3DDECL int X3DCALL xBufferWidth(int buffer = NULL);