Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs


	[DllImport("xors3d.dll", EntryPoint = "xFilePos")]
	public static extern int FilePos(int file);

	[DllImport("xors3d.dll", EntryPoint = "xSeekFile")]
	public static extern void SeekFile(int file, int offset);

	[DllImport("xors3d.dll", EntryPoint = "xFileType")]
	public static extern int FileType_(StringBuilder path);
	public static int FileType(string path)
	{
		return FileType_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xFileSize")]
	public static extern int FileSize_(StringBuilder path);
	public static int FileSize(string path)
	{
		return FileSize_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xFileCreationTime")]
	public static extern int FileCreationTime_(StringBuilder path);
	public static int FileCreationTime(string path)
	{
		return FileCreationTime_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xFileCreationTimeStr")]
	public static extern IntPtr FileCreationTimeStr_(StringBuilder path);	public static string FileCreationTimeStr(string path)
	{
		return Marshal.PtrToStringAnsi(FileCreationTimeStr_(new StringBuilder(path)));
	}

	[DllImport("xors3d.dll", EntryPoint = "xFileModificationTime")]
	public static extern int FileModificationTime_(StringBuilder path);
	public static int FileModificationTime(string path)
	{
		return FileModificationTime_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xFileModificationTimeStr")]
	public static extern IntPtr FileModificationTimeStr_(StringBuilder path);	public static string FileModificationTimeStr(string path)
	{
		return Marshal.PtrToStringAnsi(FileModificationTimeStr_(new StringBuilder(path)));
	}

	[DllImport("xors3d.dll", EntryPoint = "xReadDir")]
	public static extern int ReadDir_(StringBuilder path);
	public static int ReadDir(string path)
	{
		return ReadDir_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xCloseDir")]
	public static extern void CloseDir(int handle);

	[DllImport("xors3d.dll", EntryPoint = "xNextFile")]
	public static extern IntPtr NextFile_(int handle);
	public static string NextFile(int handle)
	{
		return Marshal.PtrToStringAnsi(NextFile_(handle));
	}

	[DllImport("xors3d.dll", EntryPoint = "xCurrentDir")]
	public static extern IntPtr CurrentDir_();
	public static string CurrentDir()
	{
		return Marshal.PtrToStringAnsi(CurrentDir_());
	}

	[DllImport("xors3d.dll", EntryPoint = "xChangeDir")]
	public static extern void ChangeDir_(StringBuilder path);
	public static void ChangeDir(string path)
	{
		ChangeDir_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xCreateDir")]
	public static extern int CreateDir_(StringBuilder path);
	public static int CreateDir(string path)
	{
		return CreateDir_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xDeleteDir")]
	public static extern int DeleteDir_(StringBuilder path);
	public static int DeleteDir(string path)
	{
		return DeleteDir_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xCopyFile")]
	public static extern int CopyFile_(StringBuilder pathSrc, StringBuilder pathDest);
	public static int CopyFile(string pathSrc, string pathDest)
	{
		return CopyFile_(new StringBuilder(pathSrc), new StringBuilder(pathDest));
	}
	[DllImport("xors3d.dll", EntryPoint = "xDeleteFile")]
	public static extern int DeleteFile_(StringBuilder path);
	public static int DeleteFile(string path)
	{
		return DeleteFile_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xEof")]
	public static extern int Eof(int file);

	[DllImport("xors3d.dll", EntryPoint = "xReadByte")]
	public static extern int ReadByte(int file);

	[DllImport("xors3d.dll", EntryPoint = "xReadShort")]
	public static extern int ReadShort(int file);

	[DllImport("xors3d.dll", EntryPoint = "xReadInt")]
	public static extern int ReadInt(int file);

	[DllImport("xors3d.dll", EntryPoint = "xReadFloat")]
	public static extern float ReadFloat(int file);

	[DllImport("xors3d.dll", EntryPoint = "xReadString")]
	public static extern IntPtr ReadString_(int file);
	public static string ReadString(int file)
	{
		return Marshal.PtrToStringAnsi(ReadString_(file));
	}

	[DllImport("xors3d.dll", EntryPoint = "xReadLine")]
	public static extern IntPtr ReadLine_(int file, int ls_flag);
	public static string ReadLine(int file, int ls_flag)
	{
		return Marshal.PtrToStringAnsi(ReadLine_(file, ls_flag));
	}

	public static string ReadLine(int file)
	{
		return ReadLine(file, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xWriteByte")]
	public static extern void WriteByte(int file, int value);

	[DllImport("xors3d.dll", EntryPoint = "xWriteShort")]
	public static extern void WriteShort(int file, int value);

	[DllImport("xors3d.dll", EntryPoint = "xWriteInt")]
	public static extern void WriteInt(int file, int value);

	[DllImport("xors3d.dll", EntryPoint = "xWriteFloat")]
	public static extern void WriteFloat(int file, float value);

	[DllImport("xors3d.dll", EntryPoint = "xWriteString")]
	public static extern void WriteString_(int file, StringBuilder value);
	public static void WriteString(int file, string value)
	{
		WriteString_(file, new StringBuilder(value));
	}
	[DllImport("xors3d.dll", EntryPoint = "xWriteLine")]
	public static extern void WriteLine_(int file, StringBuilder value, int ls_flag);
	public static void WriteLine(int file, string value, int ls_flag)
	{
		WriteLine_(file, new StringBuilder(value), ls_flag);
	}
	public static void WriteLine(int file, string value)
	{
		 WriteLine(file, value, 0);
	}

	// fonts commands
	[DllImport("xors3d.dll", EntryPoint = "xLoadFont")]
	public static extern int LoadFont_(StringBuilder name, int height, bool bold, bool italic, bool underline, StringBuilder fontface);
	public static int LoadFont(string name, int height, bool bold, bool italic, bool underline, string fontface)
	{
		return LoadFont_(new StringBuilder(name), height, bold, italic, underline, new StringBuilder(fontface));
	}
	public static int LoadFont(string name, int height, bool bold, bool italic, bool underline)
	{
		return LoadFont(name, height, bold, italic, underline, "");
	}
	public static int LoadFont(string name, int height, bool bold, bool italic)
	{
		return LoadFont(name, height, bold, italic, false, "");
	}
	public static int LoadFont(string name, int height, bool bold)
	{
		return LoadFont(name, height, bold, false, false, "");
	}
	public static int LoadFont(string name, int height)
	{
		return LoadFont(name, height, false, false, false, "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xText")]
	public static extern void Text_(float x, float y, StringBuilder textString, bool centerx, bool centery);
	public static void Text(float x, float y, string textString, bool centerx, bool centery)
	{
		Text_(x, y, new StringBuilder(textString), centerx, centery);
	}
	public static void Text(float x, float y, string textString, bool centerx)
	{
		 Text(x, y, textString, centerx, false);
	}
	public static void Text(float x, float y, string textString)
	{
		 Text(x, y, textString, false, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetFont")]
	public static extern void SetFont(int font);

	[DllImport("xors3d.dll", EntryPoint = "xFreeFont")]
	public static extern void FreeFont(int font);

	[DllImport("xors3d.dll", EntryPoint = "xFontWidth")]
	public static extern int FontWidth();

	[DllImport("xors3d.dll", EntryPoint = "xFontHeight")]
	public static extern int FontHeight();

	[DllImport("xors3d.dll", EntryPoint = "xStringWidth")]
	public static extern int StringWidth_(StringBuilder textString);
	public static int StringWidth(string textString)
	{
		return StringWidth_(new StringBuilder(textString));
	}
	[DllImport("xors3d.dll", EntryPoint = "xStringHeight")]
	public static extern int StringHeight_(StringBuilder textString);
	public static int StringHeight(string textString)
	{
		return StringHeight_(new StringBuilder(textString));
	}

	// graphics commands
	[DllImport("xors3d.dll", EntryPoint = "xWinMessage")]
	public static extern int WinMessage_(StringBuilder message);
	public static int WinMessage(string message)
	{
		return WinMessage_(new StringBuilder(message));
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetMaxPixelShaderVersion")]
	public static extern int GetMaxPixelShaderVersion();

	[DllImport("xors3d.dll", EntryPoint = "xLine")]
	public static extern void Line(int x1, int y1, int x2, int y2);

	[DllImport("xors3d.dll", EntryPoint = "xRect")]
	public static extern void Rect(int x, int y, int width, int height, bool solid);

	public static void Rect(int x, int y, int width, int height)
	{
		 Rect(x, y, width, height, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xRectsOverlap")]
	public static extern int RectsOverlap(int x1, int y1, int width1, int height1, int x2, int y2, int width2, int height2);

	[DllImport("xors3d.dll", EntryPoint = "xViewport")]
	public static extern void Viewport(int x, int y, int width, int height);

	[DllImport("xors3d.dll", EntryPoint = "xOval")]
	public static extern void Oval(int x, int y, int width, int height, bool solid);

	public static void Oval(int x, int y, int width, int height)
	{
		 Oval(x, y, width, height, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xOrigin")]
	public static extern void Origin(int x, int y);

	[DllImport("xors3d.dll", EntryPoint = "xGetMaxVertexShaderVersion")]
	public static extern int GetMaxVertexShaderVersion();

	[DllImport("xors3d.dll", EntryPoint = "xGetMaxAntiAlias")]
	public static extern int GetMaxAntiAlias();

	[DllImport("xors3d.dll", EntryPoint = "xGetMaxTextureFiltering")]
	public static extern int GetMaxTextureFiltering();

	[DllImport("xors3d.dll", EntryPoint = "xSetAntiAliasType")]
	public static extern void SetAntiAliasType(int typeID);

	[DllImport("xors3d.dll", EntryPoint = "xAppTitle")]
	public static extern void AppTitle_(StringBuilder title);
	public static void AppTitle(string title)
	{
		AppTitle_(new StringBuilder(title));
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetWND")]
	public static extern void SetWND(int window);

	[DllImport("xors3d.dll", EntryPoint = "xSetRenderWindow")]
	public static extern void SetRenderWindow(int window);

	[DllImport("xors3d.dll", EntryPoint = "xSetTopWindow")]
	public static extern void SetTopWindow(int window);

	[DllImport("xors3d.dll", EntryPoint = "xDestroyRenderWindow")]
	public static extern void DestroyRenderWindow();

	[DllImport("xors3d.dll", EntryPoint = "xFlip")]
	public static extern void Flip();

	[DllImport("xors3d.dll", EntryPoint = "xBackBuffer")]
	public static extern int BackBuffer();

	[DllImport("xors3d.dll", EntryPoint = "xLockBuffer")]
	public static extern void LockBuffer(int buffer);

	public static void LockBuffer()
	{
		 LockBuffer(0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xUnlockBuffer")]
	public static extern void UnlockBuffer(int buffer);

	public static void UnlockBuffer()
	{
		 UnlockBuffer(0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xWritePixelFast")]
	public static extern void WritePixelFast(int x, int y, int argb, int buffer);

	public static void WritePixelFast(int x, int y, int argb)
	{
		 WritePixelFast(x, y, argb, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xReadPixelFast")]
	public static extern int ReadPixelFast(int x, int y, int buffer);

	public static int ReadPixelFast(int x, int y)
	{
		return ReadPixelFast(x, y, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetPixels")]
	public static extern int GetPixels(int buffer);

	public static int GetPixels()
	{
		return GetPixels(-1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSaveBuffer")]
	public static extern void SaveBuffer_(int buffer, StringBuilder path);
	public static void SaveBuffer(int buffer, string path)
	{
		SaveBuffer_(buffer, new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetCurrentBuffer")]
	public static extern int GetCurrentBuffer();

	[DllImport("xors3d.dll", EntryPoint = "xBufferWidth")]
	public static extern int BufferWidth(int buffer);
